Big Optimisations
- Adjusted different methods for getting card point from Card class through the enum method.
- Player class now no longer have variables that dependent on the Game class.
- Dealer class now have methods that the Game class can use to control the Dealer effectively.
- Game class has the option function temporary removed.
- Game class now has the Dealer fully set up to try and beat the player.
- Main class now has the player options removed temporary.