@@ -9,9 +9,9 @@ public class Deck
     {
         for(int i = 0; i < amount; i++)
         {
-            for(Card.rank rank : Card.rank.values())
+            for(Card.Rank rank : Card.Rank.values())
             {
-                for(Card.suit suit: Card.suit.values())
+                for(Card.Suit suit: Card.Suit.values())
                 {
                     deck.add(new Card(rank, suit));
                 }
@@ -26,18 +26,9 @@ public class Deck
     
     public Card deal()
     {
-        Card drawnCard = this.deck.getFirst();
-        this.deck.remove(this.deck.getFirst());
+        Card drawnCard = this.deck.get(0);
+        this.deck.remove(this.deck.get(0));
         return drawnCard;
-    }
-    
-    //This function for testing purposes only
-    public void showCards()
-    {
-        for (Card card: deck)
-        {
-            card.show();
-        }
     }
     
 }
